[package]
name = "concurrency"
version = "0.1.0"
authors = ["Eric Shaw <taoiaox@gmail.com>"]
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
dashmap = "6.1.0"
oneshot = "0.1.8"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
